# NestWatch

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md
docs/hardware/: assembly.md  bill_of_materials.md
examples/: README.md
hardware/: README.md
src/: bird_scrape.py  config.py  dataset.py  export_model.py  facerecog.py  model.py  pi_bird_recog.py  pi_bird_recog_pc.py  train.py  video_test.py
src/nestwatch/: __init__.py  cli.py  config.py
src/nestwatch/data/: __init__.py  dataloaders.py  scraper.py
src/nestwatch/inference/: __init__.py  device.py  stream.py  video.py
src/nestwatch/models/: __init__.py  mobilenet.py
src/nestwatch/training/: __init__.py  export.py  trainer.py
src/nestwatch/utils/: __init__.py  filesystem.py
