[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nestwatch"
version = "0.1.0"
description = "Wireless bird feeder with on-device recognition"
authors = [{name = "NestWatch Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "tqdm",
    "opencv-python",
    "requests",
    "numpy",
    "duckduckgo-search",
]

[project.optional-dependencies]
development = ["black", "ruff"]
raspberrypi = ["picamera2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
